--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
   </head>
   <body>
     <div class="part1 bg-gradient1">
-      <div class="navbar">
-        <div class="logo d-flex align-items-center gap-2 ">
+      <div class="semicircle position-absolute bottom-0 start-0">
+        <img src="./assets/part1/semicircle.webp" alt="" />
+      </div>
+      <div class="navbar position-relative">
+        <div class="logo d-flex align-items-center gap-2">
           <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
           <div>
             <span class="">Heystack</span>
@@ -52,7 +55,9 @@
           <button class="nav-btn">SEE LIVE IN ACTION</button>
         </div>
       </div>
-      <div class=""></div>
+      <div class="part1-main position-relative">
+
+      </div>
     </div>
   </body>
 </html>
