--- a/index.html
+++ b/index.html
@@ -55,8 +55,32 @@
           <button class="nav-btn">SEE LIVE IN ACTION</button>
         </div>
       </div>
-      <div class="part1-main position-relative">
-
+      <div class="part1-main position-relative d-flex align-items-center m-auto">
+        <div class="d-flex flex-column">
+          <div class="paddingx-40 mb-2">
+            <h1 class="title text-center">
+              Generative AI Powered Actionable Insights for Product Experience
+              Analytics
+            </h1>
+            <p class="text-center mt-3 mb-0 text-md-center">
+              Uncover actionable insights from millions of customer reviews
+              across hundreds of retailers to minimize returns, drive product
+              innovation, identify market gaps, and gain a competitive
+              advantage.
+            </p>
+            <div class="demo-btn text-center mt-4">
+              <button>LIVE DEMO</button>
+            </div>
+          </div>
+          <iframe
+            class="iframe"
+            width="1400"
+            height="368"
+            src="https://rive.app/community/7548-15148-looping-animation-02/embed"
+            allowfullscreen
+            frameborder="0"
+          ></iframe>
+        </div>
       </div>
     </div>
   </body>
