feat:part3 content

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <iframe
             class="iframe"
             width="1400"
-            height="368"
+            height="368" 
             src="https://rive.app/community/7548-15148-looping-animation-02/embed"
             allowfullscreen
             frameborder="0"
@@ -201,6 +201,36 @@
             <div class="slide"><img src="./assets/brands/brand (53).svg" alt="Brand 12"></div>
             <div class="slide"><img src="./assets/brands/brand (54).svg" alt="Brand 12"></div>
             <div class="slide"><img src="./assets/brands/brand (55).svg" alt="Brand 12"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="part3">
+      <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
+        <p class="title-3">
+          How brands leverage Heystack Insights
+        </p>
+        <div class="container d-flex flex-column marginy-64 gap-8rem">
+          <div class="d-flex flex-row align-items-center gap-4rem">
+              <div class="w-100">
+                  <h1 class="subtitle-3 mb-3">Minimize Optimizations</h1>
+                  <p class="fs-6 ">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet 
+                      scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem 
+                      ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet 
+                      scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt
+                  </p>
+                  <a href="#" class="learn-btn">
+                      <img src="./assets/part3/learn-btn.svg" alt="">
+                  </a>
+                  <div class="subline mt-3"></div>
+              </div>
+              
+              <div class="w-100">
+                  <div class="dashboard-image w-100 h-100">
+                      <img class="w-100 h-100 rounded-05" src="./assets/part3/content.webp" alt="" class="img-fluid rounded shadow">
+                  </div>
+              </div>
           </div>
         </div>
       </div>
