--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   </div>
   <div class="part3">
     <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
-      <p class="title-3">
+      <p class="title-gradient">
         How brands leverage Heystack Insights
       </p>
       <div class="marginy-64 d-flex flex-column gap-8rem">
@@ -327,7 +327,7 @@
   </div>
   <div class="part4">
     <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
-      <p class="title-3 m-0">
+      <p class="title-gradient m-0">
         Testimonials
       </p>
       <p class="text-center font-24 pt-1 m-0">What peoaple say about us</p>
@@ -420,11 +420,47 @@
         <div class="swiper-pagination"></div>
       </div>
     </div>
+  </div>
+  <div class="part5">
+    <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
+      <p class="title-gradient m-0">
+        What is Unique about Heystack?
+      </p>
+      <div class="unique-container row d-flex flex-wrap align-content-start margintop-64">
+        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="unique-img" src="./assets/unique/Brain.svg" alt="">
+          <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
+        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="unique-img" src="./assets/unique/Data.svg" alt="">
+          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
+        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="unique-img" src="./assets/unique/Key.svg" alt="">
+          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
+        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="unique-img" src="./assets/unique/Business.svg" alt="">
+          <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
+        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="unique-img" src="./assets/unique/Business_2.svg" alt="">
+          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
+        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+          <img class="unique-img" src="./assets/unique/Business.svg" alt="">
+          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
+        </div>
+      </div>
+    </div>
 
-</html>
-
-
-</div>
+  </div>
 </body>
 
 </html>
