feat:patners brand

--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
   <link rel="stylesheet" href="./static/css/main.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
   <link rel="stylesheet" href="./static/css/testimonials.css">
+  <link rel="stylesheet" href="./static/css/partners.css">
   <script defer src="./static/js/main.js"></script>
   <script defer src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script defer src="./static/js/testimonials.js"></script>
+  <script defer src="./static/js/partners.js"></script>
 </head>
 
 <body>
@@ -421,46 +423,146 @@
       </div>
     </div>
   </div>
-  <div class="part5">
-    <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
-      <p class="title-gradient m-0">
-        What is Unique about Heystack?
-      </p>
-      <div class="unique-container row d-flex flex-wrap align-content-start margintop-64">
-        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-          <img class="unique-img" src="./assets/unique/Brain.svg" alt="">
-          <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
-          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
-        </div>
-        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-          <img class="unique-img" src="./assets/unique/Data.svg" alt="">
-          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
-          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
-        </div>
-        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-          <img class="unique-img" src="./assets/unique/Key.svg" alt="">
-          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
-          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
-        </div>
-        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-          <img class="unique-img" src="./assets/unique/Business.svg" alt="">
-          <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
-          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
-        </div>
-        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-          <img class="unique-img" src="./assets/unique/Business_2.svg" alt="">
-          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
-          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
-        </div>
-        <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
-          <img class="unique-img" src="./assets/unique/Business.svg" alt="">
-          <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
-          <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt</p>
-        </div>
+  <div class="max-width-1280 paddingy-64 paddingx-32 mx-auto">
+    <p class="title-gradient m-0">
+      What is Unique about Heystack?
+    </p>
+    <div class="unique-container row d-flex flex-wrap align-content-start margintop-64">
+      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="unique-img" src="./assets/unique/Brain.svg" alt="">
+        <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
+        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+          tempor velit consectetur in. Morbi tincidunt</p>
+      </div>
+      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="unique-img" src="./assets/unique/Data.svg" alt="">
+        <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+          tempor velit consectetur in. Morbi tincidunt</p>
+      </div>
+      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="unique-img" src="./assets/unique/Key.svg" alt="">
+        <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+          tempor velit consectetur in. Morbi tincidunt</p>
+      </div>
+      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="unique-img" src="./assets/unique/Business.svg" alt="">
+        <p class="font-20 fw-bold m-0">Robust & Massively trained models</p>
+        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+          tempor velit consectetur in. Morbi tincidunt</p>
+      </div>
+      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="unique-img" src="./assets/unique/Business_2.svg" alt="">
+        <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+          tempor velit consectetur in. Morbi tincidunt</p>
+      </div>
+      <div class="unique-card col-4 d-flex flex-column gap-1rem p-4">
+        <img class="unique-img" src="./assets/unique/Business.svg" alt="">
+        <p class="font-20 fw-bold m-0">Data From Everywhere & Anywhere</p>
+        <p class="fs-6 m-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet scelerisque eros, sed
+          tempor velit consectetur in. Morbi tincidunt</p>
       </div>
     </div>
-
   </div>
+
+  <div class="part6 max-width-1280 paddingy-64 paddingx-32 mx-auto">
+    <p class="title-gradient m-0">
+      Retail Partners?
+    </p>
+    <div class="position-relative swiper-container swiper">
+      <div class="partners-content">
+        <div class="card-wrapper swiper-wrapper" style=" display: flex; flex-direction: row;">
+          <div class="d-flex flex-column gap-40 swiper-slide" >
+            <div class="partner-card">
+              <img src="./assets/partners/target.svg" alt="">
+            </div>
+            <div class="partner-card">
+              <img src="./assets/partners/zappos.svg" alt="">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide" >
+            <div class="partner-card">
+              <img src="./assets/partners/bestbuy.svg" alt="">
+            </div>
+            <div class="partner-card">
+              <img src="./assets/partners/homedepot.svg" alt="">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide" >
+            <div class="partner-card">
+              <img src="./assets/partners/lowes.svg" alt="">
+            </div>
+            <div class="partner-card">
+              <img src="./assets/partners/wayfire.svg" alt="">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide" >
+            <div class="partner-card">
+              <img src="./assets/partners/chewy.svg" alt="">
+            </div>
+            <div class="partner-card">
+              <img src="./assets/partners/petco.svg" alt="">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide" >
+            <div class="partner-card">
+              <img src="./assets/partners/restmart.svg" alt="">
+            </div>
+            <div class="partner-card">
+              <img src="./assets/partners/sephora.svg" alt="">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide" >
+            <div class="partner-card">
+              <img src="./assets/partners/ulta.svg" alt="">
+            </div>
+            <div class="partner-card">
+              <img src="./assets/partners/chewy.svg" alt="">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide" >
+            <div class="partner-card">
+              <img src="./assets/partners/macys.svg" alt="">
+            </div>
+            <div class="partner-card">
+              <img src="./assets/partners/nordstrom.svg" alt="">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide" >
+            <div class="partner-card">
+              <img src="./assets/partners/kohls.svg" alt="">
+            </div>
+            <div class="partner-card">
+              <img src="./assets/partners/dicks.svg" alt="">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide" >
+            <div class="partner-card">
+              <img src="./assets/partners/acehardware.svg" alt="">
+            </div>
+            <div class="partner-card">
+              <img src="./assets/partners/tractorsupply.svg" alt="">
+            </div>
+          </div>
+          <div class="d-flex flex-column gap-40 swiper-slide" >
+            <div class="partner-card">
+              <img src="./assets/partners/academy.svg" alt="">
+            </div>
+            <div class="partner-card">
+              <img src="./assets/partners/dsw.svg" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="position-absolute top-50 start-0 partners-button-next partners-navBtn"></div>
+      <div class="position-absolute top-0 end-0 partners-button-prev partners-navBtn"></div>
+      <div class="swiper-pagination2"></div>
+    </div>
+  </div>
+  
 </body>
 
 </html>
