--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
     <div class="position-relative swiper-container swiper">
       <div class="partners-content">
         <div class="card-wrapper swiper-wrapper" style=" display: flex; flex-direction: row;">
-          <div class="d-flex flex-column gap-40 swiper-slide" >
+          <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="partner-card">
               <img src="./assets/partners/target.svg" alt="">
             </div>
@@ -482,7 +482,7 @@
               <img src="./assets/partners/zappos.svg" alt="">
             </div>
           </div>
-          <div class="d-flex flex-column gap-40 swiper-slide" >
+          <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="partner-card">
               <img src="./assets/partners/bestbuy.svg" alt="">
             </div>
@@ -490,7 +490,7 @@
               <img src="./assets/partners/homedepot.svg" alt="">
             </div>
           </div>
-          <div class="d-flex flex-column gap-40 swiper-slide" >
+          <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="partner-card">
               <img src="./assets/partners/lowes.svg" alt="">
             </div>
@@ -498,7 +498,7 @@
               <img src="./assets/partners/wayfire.svg" alt="">
             </div>
           </div>
-          <div class="d-flex flex-column gap-40 swiper-slide" >
+          <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="partner-card">
               <img src="./assets/partners/chewy.svg" alt="">
             </div>
@@ -506,7 +506,7 @@
               <img src="./assets/partners/petco.svg" alt="">
             </div>
           </div>
-          <div class="d-flex flex-column gap-40 swiper-slide" >
+          <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="partner-card">
               <img src="./assets/partners/restmart.svg" alt="">
             </div>
@@ -514,7 +514,7 @@
               <img src="./assets/partners/sephora.svg" alt="">
             </div>
           </div>
-          <div class="d-flex flex-column gap-40 swiper-slide" >
+          <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="partner-card">
               <img src="./assets/partners/ulta.svg" alt="">
             </div>
@@ -522,7 +522,7 @@
               <img src="./assets/partners/chewy.svg" alt="">
             </div>
           </div>
-          <div class="d-flex flex-column gap-40 swiper-slide" >
+          <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="partner-card">
               <img src="./assets/partners/macys.svg" alt="">
             </div>
@@ -530,7 +530,7 @@
               <img src="./assets/partners/nordstrom.svg" alt="">
             </div>
           </div>
-          <div class="d-flex flex-column gap-40 swiper-slide" >
+          <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="partner-card">
               <img src="./assets/partners/kohls.svg" alt="">
             </div>
@@ -538,7 +538,7 @@
               <img src="./assets/partners/dicks.svg" alt="">
             </div>
           </div>
-          <div class="d-flex flex-column gap-40 swiper-slide" >
+          <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="partner-card">
               <img src="./assets/partners/acehardware.svg" alt="">
             </div>
@@ -546,7 +546,7 @@
               <img src="./assets/partners/tractorsupply.svg" alt="">
             </div>
           </div>
-          <div class="d-flex flex-column gap-40 swiper-slide" >
+          <div class="d-flex flex-column gap-40 swiper-slide">
             <div class="partner-card">
               <img src="./assets/partners/academy.svg" alt="">
             </div>
@@ -562,7 +562,52 @@
       <div class="swiper-pagination2"></div>
     </div>
   </div>
-  
+  <div class="margintop-112 padding-24 ">
+    <div class="footer-container d-flex flex-row justify-content-between padding-80">
+      <div class="d-flex flex-column gap-3 font-14">
+        <div class="logo d-flex align-items-center gap-2">
+          <img class="logo-img" src="./assets/logo/logo.webp" alt="" />
+          <div>
+            <span class="font-20">Heystack</span>
+          </div>
+        </div>
+        <p class="m-0">The Green #8138 <br /> Dover, DE 19901</p>
+        <img class="linkedin" src="./assets/footer/linkedin.webp" alt="">
+        <div class="contact-info mb-4">
+          <p class="m-0">Phone: +1 (302) 212-0040</p>
+          <p class="m-0">Email: contact@hey-stack.com</p>
+        </div>
+      </div>
+      <div class="d-flex flex-row gap-5rem">
+        <div>
+          <p class="fw-bold">Home</p>
+          <p class="mt-3 mb-0">Customers</p>
+          <p class="mt-3 mb-0">Products</p>
+          <p class="mt-3 mb-0">Testimonials</p>
+          <p class="mt-3 mb-0">Features</p>
+          <p class="mt-3 mb-0">Retail Partners</p>
+        </div>
+        <div>
+          <p class="fw-bold">Resourse</p>
+          <p class="mt-3 mb-0">Blogs</p>
+          <p class="mt-3 mb-0">Career</p>
+          <p class="mt-3 mb-0">Teams of Service</p>
+          <p class="mt-3 mb-0">Privacy Policy</p>
+        </div>
+        <div>
+          <p class="fw-bold">Our Office</p>
+          <p class="mt-3 mb-0">Sunnyvale, CA</p>
+          <p class="mt-3 mb-0">Boston, MA</p>
+          <p class="mt-3 mb-0">Bangalore, India</p>
+          <p class="mt-3 mb-0">Pune, India</p>
+        </div>
+        <div class="location p-2 rounded-3">
+          <img src="./assets/footer/location.webp" alt="">
+        </div>
+      </div>
+    </div>
+  </div>
+
 </body>
 
 </html>
