style:part responsive

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
   <div class="part1 bg-gradient1">
     <div class="semicircle position-absolute bottom-0 start-0">
-      <img src="./assets/part1/semicircle.webp" alt="" />
+      <img src="./assets/generative/semicircle.webp" alt="" />
     </div>
     <div class="navbar position-relative">
       <div class="logo d-flex align-items-center gap-2">
@@ -58,10 +58,10 @@
         <button class="nav-btn">SEE LIVE IN ACTION</button>
       </div>
     </div>
-    <div class="part1-main position-relative d-flex align-items-center m-auto">
-      <div class="d-flex flex-column">
+    <div class="part1-main position-relative d-flex align-items-center m-auto w-100">
+      <div class="d-flex flex-column w-100">
         <div class="paddingx-40 mb-2">
-          <h1 class="title text-center">
+          <h1 class="title text-center fw-bold">
             Generative AI Powered Actionable Insights for Product Experience
             Analytics
           </h1>
@@ -72,12 +72,15 @@
             advantage.
           </p>
           <div class="demo-btn text-center mt-4">
-            <button>LIVE DEMO</button>
+            <button class="fw-bold">LIVE DEMO</button>
           </div>
         </div>
-        <iframe class="iframe" width="1400" height="368"
-          src="https://rive.app/community/7548-15148-looping-animation-02/embed" allowfullscreen
-          frameborder="0"></iframe>
+        <div class="main-image w-100">
+          <iframe class="iframe" width="1400" height="368"
+            src="https://rive.app/community/7548-15148-looping-animation-02/embed" style="width: 100%;" allowfullscreen frameborder="0">
+          </iframe>
+          <img class="ai-diagram" src="./assets/generative/hero.svg" alt="">
+        </div>
       </div>
     </div>
   </div>
@@ -339,8 +342,7 @@
             <div class="card d-flex flex-column gap-12 font-14 swiper-slide paddingx-32 paddingy-32">
               <p class="m-0 fs-6 fw-bold">“The best Webflow Templates”</p>
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo
-                consequat aute irure sint amet occaecat cupidatat non proident</p>
+                commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
                 <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
@@ -352,8 +354,7 @@
             <div class="card d-flex flex-column gap-12 font-14 swiper-slide paddingx-32 paddingy-32">
               <p class="m-0 fs-6 fw-bold">“The best Webflow Templates”</p>
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo
-                consequat aute irure sint amet occaecat cupidatat non proident</p>
+                commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
                 <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
@@ -365,8 +366,7 @@
             <div class="card swiper-slide d-flex flex-column gap-12 font-14 paddingx-32 paddingy-32">
               <p class="m-0 fs-6 fw-bold">“The best Webflow Templates”</p>
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo
-                consequat aute irure sint amet occaecat cupidatat non proident</p>
+                commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
                 <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
@@ -378,8 +378,7 @@
             <div class="card swiper-slide d-flex flex-column gap-12 font-14 paddingx-32 paddingy-32">
               <p class="m-0 fs-6 fw-bold">“The best Webflow Templates”</p>
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo
-                consequat aute irure sint amet occaecat cupidatat non proident</p>
+                commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
                 <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
@@ -391,8 +390,7 @@
             <div class="card swiper-slide d-flex flex-column gap-12 font-14 paddingx-32 paddingy-32">
               <p class="m-0 fs-6 fw-bold">“The best Webflow Templates”</p>
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo
-                consequat aute irure sint amet occaecat cupidatat non proident</p>
+                commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
                 <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
@@ -404,8 +402,7 @@
             <div class="card swiper-slide d-flex flex-column gap-12 font-14 paddingx-32 paddingy-32">
               <p class="m-0 fs-6 fw-bold">“The best Webflow Templates”</p>
               <p class="m-0">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo
-                consequat aute irure sint amet occaecat cupidatat non proident</p>
+                commodo consequat aute irure sint amet occaecat cupidatat non proident</p>
               <div class="d-flex flex-row gap-1rem">
                 <img class="testimonial-avatar" src="./assets/testimonial/avatar.webp" alt="">
                 <div class="flex flex-column">
