--- a/index.html
+++ b/index.html
@@ -145,8 +145,8 @@
         <div class="slide"><img src="./assets/brands/brand (55).svg" alt="Brand 12"></div>
       </div>
     </div>
-    <div class="brand-slider reverse">
-      <div class="slide-track">
+    <div class="brand-slider">
+      <div class="slide-track-reverse">
         <div class="slide"><img src="./assets/brands/brand (1).svg" alt="Brand 1"></div>
         <div class="slide"><img src="./assets/brands/brand (2).svg" alt="Brand 2"></div>
         <div class="slide"><img src="./assets/brands/brand (3).svg" alt="Brand 3"></div>
