style:how-brands

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
         </div>
         <div class="main-image w-100">
           <iframe class="iframe" width="1400" height="368"
-            src="https://rive.app/community/7548-15148-looping-animation-02/embed" style="width: 100%;" allowfullscreen frameborder="0">
+            src="https://rive.app/community/7548-15148-looping-animation-02/embed" style="width: 100%;" allowfullscreen
+            frameborder="0">
           </iframe>
           <img class="ai-diagram" src="./assets/generative/hero.svg" alt="">
         </div>
@@ -211,12 +212,12 @@
       <p class="title-gradient">
         How brands leverage Heystack Insights
       </p>
-      <div class="marginy-64 d-flex flex-column gap-8rem">
+      <div class="marginy-64 d-flex flex-column gap-8rem screen-max-768-gap-1rem">
         <div class="d-flex flex-column gap-8rem">
-          <div class="d-flex flex-row align-items-center gap-4rem">
-            <div class="w-100">
-              <h1 class="subtitle-3 mb-3">Minimize Optimizations</h1>
-              <p class="fs-6 ">
+          <div class="screen-max-768 gap-4rem">
+            <div class="w-100 reverse-2">
+              <h1 class="subtitle mb-3">Minimize Optimizations</h1>
+              <p class="fs-6">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
@@ -227,25 +228,21 @@
               </a>
               <div class="subline mt-3"></div>
             </div>
-            <div class="w-100">
-              <div class="dashboard-image w-100 h-100">
-                <img class="w-100 h-100 rounded-05" src="./assets/part3/content.webp" alt=""
-                  class="img-fluid rounded shadow">
-              </div>
+            <div class="w-100 reverse-1">
+              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+                class="img-fluid rounded shadow">
             </div>
           </div>
         </div>
         <div class="d-flex flex-column gap-8rem">
-          <div class="d-flex flex-row align-items-center gap-4rem">
+          <div class="screen-max-768 gap-4rem">
             <div class="w-100">
-              <div class="dashboard-image w-100 h-100">
-                <img class="w-100 h-100 rounded-05" src="./assets/part3/content.webp" alt=""
-                  class="img-fluid rounded shadow">
-              </div>
+              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+                class="img-fluid rounded shadow">
             </div>
             <div class="w-100">
-              <h1 class="subtitle-3 mb-3">Minimize Optimizations</h1>
-              <p class="fs-6 ">
+              <h1 class="subtitle mb-3">Minimize Optimizations</h1>
+              <p class="fs-6">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
@@ -259,10 +256,10 @@
           </div>
         </div>
         <div class="d-flex flex-column gap-8rem">
-          <div class="d-flex flex-row align-items-center gap-4rem">
-            <div class="w-100">
-              <h1 class="subtitle-3 mb-3">Minimize Optimizations</h1>
-              <p class="fs-6 ">
+          <div class="screen-max-768 gap-4rem">
+            <div class="w-100 reverse-2">
+              <h1 class="subtitle mb-3">Minimize Optimizations</h1>
+              <p class="fs-6">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
@@ -273,25 +270,21 @@
               </a>
               <div class="subline mt-3"></div>
             </div>
-            <div class="w-100">
-              <div class="dashboard-image w-100 h-100">
-                <img class="w-100 h-100 rounded-05" src="./assets/part3/content.webp" alt=""
-                  class="img-fluid rounded shadow">
-              </div>
+            <div class="w-100 reverse-1">
+              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+                class="img-fluid rounded shadow">
             </div>
           </div>
         </div>
         <div class="d-flex flex-column gap-8rem">
-          <div class="d-flex flex-row align-items-center gap-4rem">
+          <div class="screen-max-768 gap-4rem">
             <div class="w-100">
-              <div class="dashboard-image w-100 h-100">
-                <img class="w-100 h-100 rounded-05" src="./assets/part3/content.webp" alt=""
-                  class="img-fluid rounded shadow">
-              </div>
+              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+                class="img-fluid rounded shadow">
             </div>
             <div class="w-100">
-              <h1 class="subtitle-3 mb-3">Minimize Optimizations</h1>
-              <p class="fs-6 ">
+              <h1 class="subtitle mb-3">Minimize Optimizations</h1>
+              <p class="fs-6">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
@@ -305,10 +298,10 @@
           </div>
         </div>
         <div class="d-flex flex-column gap-8rem">
-          <div class="d-flex flex-row align-items-center gap-4rem">
-            <div class="w-100">
-              <h1 class="subtitle-3 mb-3">Minimize Optimizations</h1>
-              <p class="fs-6 ">
+          <div class="screen-max-768 gap-4rem">
+            <div class="w-100 reverse-2">
+              <h1 class="subtitle mb-3">Minimize Optimizations</h1>
+              <p class="fs-6">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
                 scelerisque eros, sed tempor velit consectetur in. Morbi tincidunt Lorem
                 ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquet
@@ -319,11 +312,9 @@
               </a>
               <div class="subline mt-3"></div>
             </div>
-            <div class="w-100">
-              <div class="dashboard-image w-100 h-100">
-                <img class="w-100 h-100 rounded-05" src="./assets/part3/content.webp" alt=""
-                  class="img-fluid rounded shadow">
-              </div>
+            <div class="w-100 reverse-1">
+              <img class="dashboard-image w-100 rounded-05" src="./assets/part3/content.webp" alt=""
+                class="img-fluid rounded shadow">
             </div>
           </div>
         </div>
